[WEBDEV-150] Integrated parliament-utils gem
* Removed unnecessary config and helpers that are now in the parliament-utils gem
* Included parliament-utils gem
* Included updated version of pugin gem

--- a/app/views/houses/parties/show.html.haml
+++ b/app/views/houses/parties/show.html.haml
@@ -16,7 +16,7 @@
 
     - if @party.member_count == 0
 
-      - if HousesHelper.commons?(@house)
+      - if Parliament::Utils::Helpers::HousesHelper.commons?(@house)
         = render partial: 'shared/dissolution_message'
 
       %ul.list--box
