--- a/app/views/constituencies/_constituency.html.haml
+++ b/app/views/constituencies/_constituency.html.haml
@@ -5,7 +5,7 @@
     = @constituency.end_date.nil? ? t('to_present') : " #{t('to')} #{l(@constituency.end_date, format: :default)}"
 - if @constituency.current?
   %h2= "#{t('mp')}"
-  - if FlagHelper.dissolution?
+  - if Parliament::Utils::Helpers::FlagHelper.dissolution?
     = render partial: 'shared/dissolution_message'
   - elsif @current_incumbency
     %ul.list--pipe
@@ -14,7 +14,7 @@
           %h3= link_to @current_incumbency.member.display_name, person_path(@current_incumbency.member.graph_id)
           %p
             = @current_incumbency.date_range
-  - elsif FlagHelper.election_period?
+  - elsif Parliament::Utils::Helpers::FlagHelper.election_period?
     = render partial: 'shared/election_message'
   - else @current_incumbency.nil?
     .highlight--box.highlight--caution__soft
