--- a/app/views/houses/show.html.haml
+++ b/app/views/houses/show.html.haml
@@ -9,13 +9,13 @@
     %ul.list--box
       %li
         .list--details
-          - if HousesHelper.commons?(@house)
+          - if Parliament::Utils::Helpers::HousesHelper.commons?(@house)
             %h2= link_to("#{t('mp_plural')}", house_members_current_a_z_letter_path(@house.graph_id, 'a'))
           - else
             %h2= link_to("#{t('lord_plural')}", house_members_current_a_z_letter_path(@house.graph_id, 'a'))
           %p= "#{t('all').capitalize} #{t('current')} #{t('member_plural')} #{t('of_the')} #{@house.name}."
 
-      - if HousesHelper.commons?(@house)
+      - if Parliament::Utils::Helpers::HousesHelper.commons?(@house)
         %li
           .list--details
             %h2= link_to("#{t('party_plural').capitalize}", house_parties_current_path(@house.graph_id))
@@ -26,7 +26,7 @@
             %h2= link_to("#{t('parties_and_groups').capitalize}", house_parties_current_path(@house.graph_id))
             %p= "#{t('all').capitalize} #{t('current')} #{t('parties_and_groups')} #{t('in_the')} #{@house.name}."
 
-      - if HousesHelper.commons?(@house)
+      - if Parliament::Utils::Helpers::HousesHelper.commons?(@house)
         %li
           .list--details
             %h2= link_to("#{t('constituency_plural').capitalize}", constituencies_current_a_z_letter_path('a'))
