--- a/app/views/constituencies/show.html.haml
+++ b/app/views/constituencies/show.html.haml
@@ -1,14 +1,6 @@
 #content.section--primary
   .container
-    .block--border__bottom
+    %h1= title(@constituency.name)
+    = render partial: 'shared/map'
 
-      #mapbox{ data: { json: { location: @json_location } } }
-        %noscript
-          %p
-            = "#{t('constituencies.constituency.constituency_map_fallback')}"
-
-      %h1= title(@constituency.name)
-
-%section
-  .container
-    = render 'constituencies/constituency'
+= render 'constituencies/constituency'
