--- a/app/views/houses/show.html.haml
+++ b/app/views/houses/show.html.haml
@@ -6,7 +6,7 @@
 
 %section
   .container
-    %ul.list--box
+    %ul.list--block
       %li
         .list--details
           - if Parliament::Utils::Helpers::HousesHelper.commons?(@house)
