--- a/app/views/parliaments/houses/parties/show.html.haml
+++ b/app/views/parliaments/houses/parties/show.html.haml
@@ -7,7 +7,7 @@
 
 %section#content
   .container
-    %ul.list--box
+    %ul.list--block
       %li
         .list--details
           %h2= link_to "#{t('mp_plural')}", parliament_house_party_members_path(@parliament.graph_id, @house.graph_id, @party.graph_id)
