--- a/app/views/parliaments/show.html.haml
+++ b/app/views/parliaments/show.html.haml
@@ -8,7 +8,7 @@
 
 %section#content
   .container
-    %ul.list--box
+    %ul.list--block
       %li
         .list--details
           %h2= link_to "#{t('mp_plural')}", parliament_members_path(@parliament.graph_id)
