--- a/app/views/parties/show.html.haml
+++ b/app/views/parties/show.html.haml
@@ -5,7 +5,7 @@
 - if @party.current?
   %section
     .container
-      %ul.list--box
+      %ul.list--block
         %li
           .list--details
             %h2= link_to("#{t('current').capitalize} #{t('member_plural')}", party_members_current_path(@party.graph_id))
@@ -16,7 +16,7 @@
     .container
       .highlight--box.highlight--primary
         %p= t('.party_no_current_members')
-      %ul.list--box
+      %ul.list--block
         %li
           .list--details
             %h2= link_to("#{t('view_all').capitalize} #{t('former')} #{@party.name} #{t('member_plural')}", party_members_path(@party.graph_id))
