[WEBSITE-861] remove link title attrib

--- a/app/views/postcodes/_postcode_lookup.html.haml
+++ b/app/views/postcodes/_postcode_lookup.html.haml
@@ -16,4 +16,4 @@
       %span{:class => 'btn--loading__icon'}
         %object{:data => 'https://s3-eu-west-1.amazonaws.com/web1devci.pugin-website/1.4.4/icons/loading.svg', :type => 'image/svg+xml'}
 
-%p= t('.do_not_know_postcode', link: link_to(t('.do_not_know_postcode_link'), 'http://www.royalmail.com/find-a-postcode', title: t('open_new_window'))).html_safe
+%p= t('.do_not_know_postcode', link: link_to(t('.do_not_know_postcode_link'), 'http://www.royalmail.com/find-a-postcode')).html_safe
