--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -37,6 +37,18 @@
         %h2= "#{t('.contact').capitalize}"
         - if @seat_incumbencies.present?
           %p= t('.contact_postcode')
+          .dropdown
+            .dropdown__toggle
+              %h3= link_to t('.when_to_contact.title'), '#'
+            .dropdown__content.visually-hidden
+              %p= t('.when_to_contact.mps_can_help_with')
+              %ul.list--bullet
+                %li= t('.when_to_contact.hospitals_nhs')
+                %li= t('.when_to_contact.problems')
+                %li= t('.when_to_contact.immigation')
+                %li= t('.when_to_contact.school_closures')
+                %li= t('.when_to_contact.transport')
+              %p= link_to t('.when_to_contact.who_else_can_help'), who_should_i_contact_with_my_issue_path
         - if @person.statuses[:house_membership_status].include?('Current MP') || @person.statuses[:house_membership_status].include?('Member of the House of Lords')
           - if @current_incumbency.contact_points.empty?
             %p= t('.empty_contact_details')
