[WEBSITE-1884] How to contact your mp showing on Lords pages
* Fixed bug by checking most recent incumbency is with House of Commons

--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -35,7 +35,7 @@
     .container
       .block
         %h2= "#{t('.contact').capitalize}"
-        - if @seat_incumbencies.present?
+        - if @most_recent_incumbency && @most_recent_incumbency.house.name == 'House of Commons'
           %p= t('.contact_postcode')
           .dropdown
             .dropdown__toggle
