Fix immigration typo

--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -45,7 +45,7 @@
               %ul.list--bullet
                 %li= t('.when_to_contact.hospitals_nhs')
                 %li= t('.when_to_contact.problems')
-                %li= t('.when_to_contact.immigation')
+                %li= t('.when_to_contact.immigration')
                 %li= t('.when_to_contact.school_closures')
                 %li= t('.when_to_contact.transport')
               %p= link_to t('.when_to_contact.who_else_can_help'), who_should_i_contact_with_my_issue_path
