--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -71,7 +71,7 @@
                 - if @current_incumbency.contact_points.length > 1
                   - unless contact_point.equal?(@current_incumbency.contact_points.last)
                     .line-break--sm
-        - if @seat_incumbencies.present?
+        - if @seat_incumbencies.present? && @person.statuses[:house_membership_status].include?('Current MP')
           %p= t('.contact_discussion')
 
 %section
