[WEBSITE-1766] Updated show page with new roles design

--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -89,13 +89,13 @@
                   %h4.lead= "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}"
                 %p= incumbency.date_range
 
-          - @committee_memberships.each do |committee|
-            - if committee.current?
+          - @committee_memberships.each do |committee_membership|
+            - if committee_membership.current?
               %li
                 .list--details
                   %h3.content--xs= t('.committee_role').capitalize
-                  %h4.lead= "#{t('member').capitalize} #{t('of_the')} #{committee.formal_body.name}"
-                  %p= "#{committee.date_range}"
+                  %h4.lead= "#{t('member').capitalize} #{t('of_the')} #{committee_membership.formal_body.name}"
+                  %p= "#{committee_membership.date_range}"
 
       .dropdown
         .dropdown__toggle
@@ -116,13 +116,13 @@
                         %h5= "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}"
                       %p= t('.parliamentary_role').capitalize
                       %p= incumbency.date_range
-                - @committee_memberships.each do |committee|
-                  - if committee.current?
+                - @committee_memberships.each do |committee_membership|
+                  - if committee_membership.current?
                     %li
                       .list--details
-                        %h5= "#{t('member').capitalize} #{t('of_the')} #{committee.formal_body.name}"
+                        %h5= "#{t('member').capitalize} #{t('of_the')} #{committee_membership.formal_body.name}"
                         %p= t('.committee_role').capitalize
-                        %p= "#{committee.date_range}"
+                        %p= "#{committee_membership.date_range}"
           -unless @history.nil? || @history[:years].empty?
             - @history[:years].keys.sort.each do |year|
               - year_multiplier = year * @year_seperator
@@ -140,13 +140,14 @@
                           %h5= "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}"
                         %p= t('.parliamentary_role').capitalize
                         %p= incumbency.date_range
-                  - @committee_memberships.each do |committee|
-                    - unless committee.current?
-                      %li
-                        .list--details
-                          %h5= "#{t('member').capitalize} #{t('of_the')} #{committee.formal_body.name}"
-                          %p= t('.committee_role').capitalize
-                          %p= "#{committee.date_range}"
+                  - @committee_memberships.each do |committee_membership|
+                    - unless committee_membership.current?
+                      -if committee_membership.formal_body
+                        %li
+                          .list--details
+                            %h5= "#{t('member').capitalize} #{t('of_the')} #{committee_membership.formal_body.name}"
+                            %p= t('.committee_role').capitalize
+                            %p= "#{committee_membership.date_range}"
           - if @history && @history[:start]
             .timeline
               %h3= @history[:start].year
