--- a/app/views/constituencies/show.html.haml
+++ b/app/views/constituencies/show.html.haml
@@ -1,6 +1,10 @@
 #content.section--primary
   .container
     %h1= title(@constituency.name)
+    - @constituency.regions.each do |region|
+      %p.lead
+        = t('.constituency_in')
+        = link_to "#{region.name}", places_show_path(region.gss_code)
     = render partial: 'shared/map'
 
 = render 'constituencies/constituency'
