--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -75,91 +75,136 @@
 
 %section
   .container
-    - if @seat_incumbencies.present? || @house_incumbencies || @committee_memberships.present?
-      %h2= t('.roles').capitalize
-      - unless @history.nil? || @history[:current].empty? || @committee_memberships.nil?
-        %ul.list--pipe
-          - @history[:current].each do |incumbency|
-            %li
-              .list--details
-                %h3.content--xs= t('.parliamentary_role').capitalize
-                - if incumbency.respond_to?(:constituency)
-                  %h4.lead
-                    = t('.mp_for')
-                    = link_to incumbency.constituency.name, constituency_path(incumbency.constituency.graph_id)
-                - else
-                  %h4.lead= "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}"
-                %p= incumbency.date_range
+    %h2= t('.roles').capitalize
+    - unless @history.nil? || @history[:current].empty?
+      %ul.list--pipe
+        - @history[:current].each do |role|
+          %li
+            .list--details
+              - if Grom::Helper.get_id(role.type) == 'SeatIncumbency'
+                %h3.content--xs
+                  = t('.parliamentary_role').capitalize
+                  - if role.class == GroupingHelper::GroupedObject
+                    %h4.lead
+                      = t('.mp_for')
+                      = link_to role.nodes[0].constituency.name, constituency_path(role.nodes[0].constituency.graph_id)
+                    %p= "Elected #{role.nodes.count} times"
+                    %ul.list--bullet
+                      - role.nodes.each do |node|
+                        %li= "#{node.date_range}"
+                  - else
+                    %h4.lead
+                      = role.name
+                      = link_to role.constituency.name, constituency_path(role.constituency.graph_id)
+                    %p= "#{role.date_range}"
 
-          -# Committees list, wrapped within conditional flag
-          - if Pugin::Feature::Bandiera.show_committees?
-            - @committee_memberships.each do |committee_membership|
-              - if committee_membership.current?
+              - elsif Grom::Helper.get_id(role.type) == 'HouseIncumbency'
+                %h3.content--xs= t('.house_of_lords_role')
+                %h4.lead= "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}"
+                %p= "#{role.date_range}"
+
+              - elsif Grom::Helper.get_id(role.type) == 'FormalBodyMembership'
+                -# Committees list, wrapped within conditional flag
+                - if Pugin::Feature::Bandiera.show_committees?
+                  %h3.content--xs
+                    = t('.committee_role').capitalize
+                    - if role.class == GroupingHelper::GroupedObject
+                      %h4.lead
+                        = "#{t('member').capitalize} #{t('of_the')} #{role.grouped_by}"
+                        %ul.list--bullet
+                          - role.nodes.each do |node|
+                            %li= "#{node.date_range}"
+                    - else
+                      %h4.lead= "#{t('member').capitalize} #{t('of_the')} #{role.formal_body.name}"
+                      %p= "#{role.date_range}"
+
+    .dropdown
+      .dropdown__toggle
+        %h3= link_to "#{t('.show_history')}", "#"
+      .dropdown__content
+        .timeline
+          - unless @history.nil? || @history[:current].empty?
+            %h2= "#{t('.held_currently')}"
+            %ul.list--block
+              - @history[:current].each do |role|
                 %li
                   .list--details
-                    %h3.content--xs= t('.committee_role').capitalize
-                    %h4.lead= "#{t('member').capitalize} #{t('of_the')} #{committee_membership.formal_body.name}"
-                    %p= "#{committee_membership.date_range}"
+                    - if Grom::Helper.get_id(role.type) == 'SeatIncumbency'
+                      - if role.class == GroupingHelper::GroupedObject
+                        %h5
+                          = t('.mp_for')
+                          = link_to role.nodes[0].constituency.name, constituency_path(role.nodes[0].constituency.graph_id)
+                        %p= "Elected #{role.nodes.count} times"
+                        %ul.list--bullet
+                          - role.nodes.each do |node|
+                            %li= "#{node.date_range}"
+                      - else
+                        %h5
+                          = role.name
+                          = link_to role.constituency.name, constituency_path(role.constituency.graph_id)
+                        %p= t('.parliamentary_role').capitalize
+                        %p= "#{role.date_range}"
 
-      - if @seat_incumbencies.count > 1 || @committee_memberships.count > 1
-        .dropdown
-          .dropdown__toggle
-            %h3= link_to "#{t('.show_history')}", "#"
-          .dropdown__content
-            - unless @history.nil? || @history[:current].empty? || @committee_memberships.nil?
-              .timeline
-                %h4= "#{t('.held_currently')}"
-                %ul.list--block
-                  - @history[:current].each do |incumbency|
-                    %li
-                      .list--details
-                        - if incumbency.respond_to?(:constituency)
+                    - elsif Grom::Helper.get_id(role.type) == 'HouseIncumbency'
+                      %h5= "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}"
+                      %p= t('.house_of_lords_role')
+                      %p= "#{role.date_range}"
+
+                    - elsif Grom::Helper.get_id(role.type) == 'FormalBodyMembership'
+                      -# Committees list, wrapped within conditional flag
+                      - if Pugin::Feature::Bandiera.show_committees?
+                        - if role.class == GroupingHelper::GroupedObject
+                          %h5= "#{t('member').capitalize} #{t('of_the')} #{role.grouped_by}"
+                          %p= t('.committee_role').capitalize
+                          %ul.list--bullet
+                            - role.nodes.each do |node|
+                              %li= "#{node.date_range}"
+                        - else
+                          %h5= "#{t('member').capitalize} #{t('of_the')} #{role.formal_body.name}"
+                          %p= t('.committee_role').capitalize
+                          %p= "#{role.date_range}"
+
+          - unless @history.nil? || @history[:years].empty?
+            - @history[:years].keys.sort.each do |year|
+              %h2= "#{t('.held_in')} #{year} #{t('.years')}"
+              %ul.list--block
+                - @history[:years][year].each do |role|
+                  %li
+                    .list--details
+                      - if Grom::Helper.get_id(role.type) == 'SeatIncumbency'
+                        - if role.class == GroupingHelper::GroupedObject
                           %h5
                             = t('.mp_for')
-                            = link_to incumbency.constituency.name, constituency_path(incumbency.constituency.graph_id)
+                            = link_to role.nodes[0].constituency.name, constituency_path(role.nodes[0].constituency.graph_id)
+                          %p= "Elected #{role.nodes.count} times"
+                          %ul.list--bullet
+                            - role.nodes.each do |node|
+                              %li= "#{node.date_range}"
                         - else
-                          %h5= "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}"
-                        %p= t('.parliamentary_role').capitalize
-                        %p= incumbency.date_range
-
-                  -# Committees list, wrapped within conditional flag
-                  - if Pugin::Feature::Bandiera.show_committees?
-                    - @committee_memberships.each do |committee_membership|
-                      - if committee_membership.current?
-                        %li
-                          .list--details
-                            %h5= "#{t('member').capitalize} #{t('of_the')} #{committee_membership.formal_body.name}"
-                            %p= t('.committee_role').capitalize
-                            %p= "#{committee_membership.date_range}"
-
-            -unless @history.nil? || @history[:years].empty?
-              - @history[:years].keys.sort.each do |year|
-                - year_multiplier = year * @year_seperator
-                .timeline
-                  %h4= "#{t('.held_in')} #{year_multiplier} #{t('.years')}"
-                  %ul.list--block
-                    - @history[:years][year].each do |incumbency|
-                      %li
-                        .list--details
-                          - if incumbency.respond_to?(:constituency)
-                            %h5
-                              = t('.mp_for')
-                              = link_to incumbency.constituency.name, constituency_path(incumbency.constituency.graph_id)
-                          - else
-                            %h5= "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}"
+                          %h5
+                            = role.name
+                            = link_to role.constituency.name, constituency_path(role.constituency.graph_id)
                           %p= t('.parliamentary_role').capitalize
-                          %p= incumbency.date_range
+                          %p= "#{role.date_range}"
 
-                    -# Committees list, wrapped within conditional flag
-                    - if Pugin::Feature::Bandiera.show_committees?
-                      - @committee_memberships.each do |committee_membership|
-                        - unless committee_membership.current?
-                          - if committee_membership.formal_body
-                            %li
-                              .list--details
-                                %h5= "#{t('member').capitalize} #{t('of_the')} #{committee_membership.formal_body.name}"
-                                %p= t('.committee_role').capitalize
-                                %p= "#{committee_membership.date_range}"
-            - if @history && @history[:start]
-              .timeline
-                %h3= @history[:start].year
+                      - elsif Grom::Helper.get_id(role.type) == 'HouseIncumbency'
+                        %h5= "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}"
+                        %p= t('.house_of_lords_role')
+                        %p= "#{role.date_range}"
+
+                      - elsif Grom::Helper.get_id(role.type) == 'FormalBodyMembership'
+                        -# Committees list, wrapped within conditional flag
+                        - if Pugin::Feature::Bandiera.show_committees?
+                          - if role.class == GroupingHelper::GroupedObject
+                            %h5= "#{t('member').capitalize} #{t('of_the')} #{role.grouped_by}"
+                            %p= t('.committee_role').capitalize
+                            %ul.list--bullet
+                              - role.nodes.each do |node|
+                                %li= "#{node.date_range}"
+                          - else
+                            %h5= "#{t('member').capitalize} #{t('of_the')} #{role.formal_body.name}"
+                            %p= t('.committee_role').capitalize
+                            %p= "#{role.date_range}"
+
+          - if @history && @history[:start]
+            %h2= @history[:start].year
