[WEBSITE-1954] Added feature flag for committees

--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -91,13 +91,16 @@
                   %h4.lead= "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}"
                 %p= incumbency.date_range
 
-          - @committee_memberships.each do |committee_membership|
-            - if committee_membership.current?
-              %li
-                .list--details
-                  %h3.content--xs= t('.committee_role').capitalize
-                  %h4.lead= "#{t('member').capitalize} #{t('of_the')} #{committee_membership.formal_body.name}"
-                  %p= "#{committee_membership.date_range}"
+          -# Committees list, wrapped within conditional flag
+          - if Pugin::Feature::Bandiera.show_committees?
+            - @committee_memberships.each do |committee_membership|
+              - if committee_membership.current?
+                %li
+                  .list--details
+                    %h3.content--xs= t('.committee_role').capitalize
+                    %h4.lead= "#{t('member').capitalize} #{t('of_the')} #{committee_membership.formal_body.name}"
+                    %p= "#{committee_membership.date_range}"
+
       - if @seat_incumbencies.count > 1 || @committee_memberships.count > 1
         .dropdown
           .dropdown__toggle
@@ -118,13 +121,17 @@
                           %h5= "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}"
                         %p= t('.parliamentary_role').capitalize
                         %p= incumbency.date_range
-                  - @committee_memberships.each do |committee_membership|
-                    - if committee_membership.current?
-                      %li
-                        .list--details
-                          %h5= "#{t('member').capitalize} #{t('of_the')} #{committee_membership.formal_body.name}"
-                          %p= t('.committee_role').capitalize
-                          %p= "#{committee_membership.date_range}"
+
+                  -# Committees list, wrapped within conditional flag
+                  - if Pugin::Feature::Bandiera.show_committees?
+                    - @committee_memberships.each do |committee_membership|
+                      - if committee_membership.current?
+                        %li
+                          .list--details
+                            %h5= "#{t('member').capitalize} #{t('of_the')} #{committee_membership.formal_body.name}"
+                            %p= t('.committee_role').capitalize
+                            %p= "#{committee_membership.date_range}"
+
             -unless @history.nil? || @history[:years].empty?
               - @history[:years].keys.sort.each do |year|
                 - year_multiplier = year * @year_seperator
@@ -142,14 +149,17 @@
                             %h5= "#{t('member').capitalize} #{t('of_the')} #{t('house_of_lords')}"
                           %p= t('.parliamentary_role').capitalize
                           %p= incumbency.date_range
-                    - @committee_memberships.each do |committee_membership|
-                      - unless committee_membership.current?
-                        - if committee_membership.formal_body
-                          %li
-                            .list--details
-                              %h5= "#{t('member').capitalize} #{t('of_the')} #{committee_membership.formal_body.name}"
-                              %p= t('.committee_role').capitalize
-                              %p= "#{committee_membership.date_range}"
+
+                    -# Committees list, wrapped within conditional flag
+                    - if Pugin::Feature::Bandiera.show_committees?
+                      - @committee_memberships.each do |committee_membership|
+                        - unless committee_membership.current?
+                          - if committee_membership.formal_body
+                            %li
+                              .list--details
+                                %h5= "#{t('member').capitalize} #{t('of_the')} #{committee_membership.formal_body.name}"
+                                %p= t('.committee_role').capitalize
+                                %p= "#{committee_membership.date_range}"
             - if @history && @history[:start]
               .timeline
                 %h3= @history[:start].year
