[Fix] Correct rendering on people/show when only one parliamentary role
* Amended people/show view
* Amended people/show test

--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -94,7 +94,7 @@
                         %li= "#{node.date_range}"
                   - else
                     %h4.lead
-                      = role.name
+                      = role.constituency.name
                       = link_to role.constituency.name, constituency_path(role.constituency.graph_id)
                     %p= "#{role.date_range}"
 
@@ -140,7 +140,7 @@
                             %li= "#{node.date_range}"
                       - else
                         %h5
-                          = role.name
+                          = role.constituency.name
                           = link_to role.constituency.name, constituency_path(role.constituency.graph_id)
                         %p= t('.parliamentary_role').capitalize
                         %p= "#{role.date_range}"
